--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -5,8 +5,7 @@
 * [[blonde]]
 
 ===Etymology===
-{{rfscript|Deva}}
-From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from {{etyl|fro}} {{term|blond|blond, blont|lang=fro}}, of {{etyl|gem}} origin, from {{etyl|frk}} {{recons|blund|blund|a mixed color between golden and light-brown|lang=frk}}, from {{etyl|gem-pro|en}} {{recons|blundaz||mixed, blinding|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|bʰlendʰ-||to become turbid, see badly, go blind|lang=ine-pro}}. Compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax|grey-haired|lang=ang}}, {{etyl|ang|-}} {{term|blandan||to mix|lang=ang}}. More at {{l|en|blend}}.
+From {{etyl|frm}} {{term|blond|lang=fr}} {{m}}, from {{etyl|fro}} {{term|blond|blond, blont|lang=fro}}, of {{etyl|gem}} origin, from {{etyl|frk}} {{recons|blund|blund|a mixed color between golden and light-brown|lang=frk}}, from {{etyl|gem-pro|en}} {{recons|blundaz||mixed, blinding|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|bʰlendʰ-||to become turbid, see badly, go blind|lang=ine-pro}}. Compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax|grey-haired|lang=ang}}, {{etyl|ang|-}} {{term|blandan||to mix|lang=ang}}. More at {{l|en|blend}}.
 
 Alternate etymology connects {{etyl|frk|-}} {{recons|blund|lang=frk}} to {{etyl|gem-pro|en}} {{recons|blundaz||blond|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|bʰl̥ndʰ-|lang=ine-pro}}, {{recons|bʰlendʰ-||blond, red-haired|lang=ine-pro}}. Cognate with {{etyl|sa|-}} {{term|ब्रध्न||tr=bradhná|ruddy, pale red, yellowish|lang=sa}}.
 
@@ -18,16 +17,19 @@ Alternate etymology connects {{etyl|frk|-}} {{recons|blund|lang=frk}} to {{etyl|
 ===Noun===
 {{en-noun}}
 
-# A person of [[fair]] skin and fair hair (usually spelled "''blonde''" when referring to a woman).
-# A [[pale]] [[golden]] [[brown]] [[colour]]/[[color]].
+# A person of fair hair.<!--I removed "fair skin" because an African with dyed hair can be a blond. -sche.-->
+# A [[pale]] [[yellow]]ish ([[golden]] [[brown]]) [[color]], especially as a hair color.
+#: {{color panel|F8E8A7}}
 
 ====Usage notes====
-: In English, this is one of few words where gender differentiation may be reflected in spelling, despite being relatively common in other languages. Not surprisingly, writers may use the spellings interchangeably. "Blond(e)" has only recently been borrowed from French into English to refer to light hair; [[traditional]] terms for light hair in English are "''fair(-haired)''", "''[[flaxen]]''", and "''[[towhead|tow headed]]''".
+* In English, this is one of a few words which can show gender, with "blond" being used of males and "blonde" of females, following French usage. 
+* Some writers, especially in the US treat the spellings as interchangeable or use ''blond'' gender-neutrally.
+* Traditional terms for light hair in English are "''fair(-haired)''", "''[[flaxen]]''", and "''[[towhead|tow headed]]''".
 
 ====Translations====
-{{trans-top|fair skinned/haired person}}
+{{trans-top|fair-haired person}}
 * Bulgarian: {{t-|bg|блондин|m|tr=blondín}}, {{t-|bg|блондинка|f|tr=blondínka}}
-* Catalan: {{t+|ca|ros|m}} (only hair, not skin)
+* Catalan: {{t+|ca|ros|m}}<!--(only hair, not skin)-->
 * Chinese:
 *: Mandarin: {{t|cmn|金髮|sc=Hani}}, {{t|cmn|金发|tr=jīnfà|sc=Hani}} {{qualifier|blond hair}}
 * Czech: {{t+|cs|blondýna|f}}, {{t+|cs|blonďák|m}}
@@ -38,6 +40,7 @@ Alternate etymology connects {{etyl|frk|-}} {{recons|blund|lang=frk}} to {{etyl|
 * French: {{t+|fr|blond}}, {{t+|fr|blonde}}
 * German: {{t-|de|Blond|m}}, {{t+|de|Blondine|f}}
 * Hebrew: {{t-|he|בלונדיני|m|tr=blondyni|sc=Hebr}}, {{t-|he|בלונדינית|f|tr=blondynit|sc=Hebr}}
+* Hindi: {{t-|hi|सुनहरे बालोंवाला|sc=Deva}}
 * Hungarian: {{t+|hu|szőke}}
 * Icelandic: {{t-|is|ljóshærður|m}}, {{t-|is|ljóshærð|f}}
 * Ido: [[blonda]]
@@ -48,35 +51,51 @@ Alternate etymology connects {{etyl|frk|-}} {{recons|blund|lang=frk}} to {{etyl|
 * Latin: {{t-|la|flavicomus|alt=flāvicomus}}, {{t+|la|fulvus}}
 * Macedonian: {{t-|mk|русокос|m|tr=rúsokos}}, {{t-|mk|плав|m|tr=plav}}, {{t-|mk|русокоса|f|tr=rusókosa}}, {{t-|mk|плава|f|tr=pláva}}
 * Norwegian: {{t-|no|lys(håret)}}, blond, {{t+|no|blondine}}
+* Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
 * Portuguese: [[louro]], [[loiro]], [[laurícomo]], [[flavícomo]], [[fulvícomo]], [[blondícomo]], [[claricápilo]], [[alvo]]; "hypocorism" [[lourinho]], [[galeguinho]], [[blondinet]], [[clarinho]]
 * Romanian: [[blondă]]
 * Russian: {{t+|ru|блондин|m|tr=blondín}}, {{t+|ru|блондинка|f|tr=blondínka}}
 * Scottish Gaelic: [[bàn]], [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{m}}, [[bean#Scottish Gaelic|bean]] bhàn {{f}}
 * Spanish: [[rubio]] {{m}}, [[canche]] {{m}} {{qualifier|Guatemala}}, [[catire]] {{m}} {{qualifier|Venezuela}}, [[chele]] {{m}} {{qualifier|El Salvador|Honduras|Nicaragua}}, [[choco]] {{m}} {{qualifier|Bolivia}}, [[fulo]] {{m}} {{qualifier|Panama}}, [[gringo]] {{m}} {{qualifier|Peru}}, [[güero]] {{m}} {{qualifier|Mexico}}, [[macho]] {{m}} {{qualifier|Costa Rica}}, [[mono]] {{m}} {{qualifier|Colombia}}, [[rucio]] {{m}} {{qualifier|Chile}}, [[suco]] {{m}} {{qualifier|Ecuador}}
 * Swedish: {{t+|sv|blondin}}
+* Turkish: {{t+|tr|sarışın}}
 * Volapük: {{qualifier|male or female}} {{t+|vo|blonan}}, {{qualifier|male}} {{t-|vo|hiblonan}}, {{qualifier|female}} {{t+|vo|jiblonan}}
 * Welsh: [[penfelyn]]
+{{trans-bottom}}
+
+{{trans-top|a pale yellowish color}}
+* Bulgarian: {{t-|bg|руса коса}} {{qualifier|hair color}}
+* Hungarian: {{t+|hu|szőke}} {{qualifier|hair color}}
+* Japanese: {{t-|ja|金髪|tr=kinpatsu|sc=Jpan}} {{qualifier|hair color}}
+{{trans-mid}}
+* Persian: {{t+|fa|بور|sc=fa-Arab}}
+* Polish: {{t+|pl|blond|m}}
+* Portuguese: {{t-|pt|loira|f}}, {{t+|pt|loiro}} {{qualifier|hair color}}
 {{trans-bottom}}
 
 ===Adjective===
 {{en-adj|er|more}}
 
-# Of a bleached, or pale golden colour.
+# Of a bleached or pale golden (light [[yellow]]ish) colour.
 #: '''''blond''' hair''
-#* '''1914''', ''American anthropologist''
+#: '''''blonde''' ale''; '''''blonde''' beer''
+#* '''1914''', in the ''American Anthropologist'':
 #*: She has a '''blond''' complexion, with brown hair and gray eyes.
-# Of a blond [[complexion]] (referring to a person)
+#:* {{quote-magazine|year=2011|month=Feb|title=Beauty Confessions|volume=216|issue=2|page=60|magazine=Redbook|passage=If you're going one or two shades lighter, don't even touch your brows. But if you're making a big change, soften them by tinting them with home haircolor: a lighter shade of brown for '''blonder''' shades, a golden shade if you're dyeing your hair red.
+}}
+# {{context|of a|person}} Having blond hair.
+#* {{quote-magazine|year=2012|month=Jan|title=The Best Blonde Hair Color in Hollywood|magazine=Cosmopolitan|url=http://www.cosmopolitan.com/hairstyles-beauty/hair-care/best-blonde-hair-color#slide-1|passage='''Blonde''' bombshells have been around since the beginning of time, but lately, stars have really been stepping up their golden-haired game.}}
 
 ====Translations====
-{{trans-top|colour}}
-* Arabic: {{t-|ar|أشقر|tr='áshqar|sc=Arab}}
+{{trans-top|of a pale golden colour}}
+* Arabic: {{t-|ar|أشقر|tr='áshqar|sc=Arab}}, {{t-|ar|شقراء|f|alt=شَقْراء|tr=shaqra'|sc=Arab}}
 * Bulgarian: {{t+|bg|рус}}, {{t+|bg|светъл}}
 * Chinese:
 *: Mandarin: {{t|cmn|金髮|sc=Hani}}, {{t|cmn|金发|tr=jīnfà|sc=Hani}}
 * Dutch: {{t+|nl|blond}}
 * Esperanto: {{t-|eo|blonda}}
 * Finnish: {{t+|fi|vaalea}}
-* French: {{t+|fr|blond}}
+* French: {{t+|fr|blond}}, {{t+|fr|blonde}}
 * German: {{t+|de|blond}}, {{t+|de|hell}}
 {{trans-mid}}
 * Japanese: {{t-|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の|sc=Jpan}}
@@ -89,7 +108,7 @@ Alternate etymology connects {{etyl|frk|-}} {{recons|blund|lang=frk}} to {{etyl|
 * Volapük: {{t+|vo|blonik}}, {{qualifier|obsolete}} {{t-|vo|blönik}}
 {{trans-bottom}}
 
-{{trans-top|person's complexion}}
+{{trans-top|having blonde hair or complexion}}
 * Arabic: {{t-|ar|أشقر|m|tr='áshqar}}, {{t-|ar|شقراء|f|tr=shaqraa'}}, {{t-|ar|شقر|p|tr=shuqr}}
 * Bulgarian: {{t+|bg|рус}}, {{t+|bg|светъл}}
 * Dutch: {{t+|nl|blond}}
@@ -105,7 +124,22 @@ Alternate etymology connects {{etyl|frk|-}} {{recons|blund|lang=frk}} to {{etyl|
 * Volapük: {{t+|vo|blonik}}, {{qualifier|obsolete}} {{t-|vo|blönik}}
 {{trans-bottom}}
 
+{{checktrans-top}}
+* {{ttbc|bg}}: {{t+|bg|златист|sc=Cyrl}}
+* {{ttbc|pt}}: {{t+|pt|loiro}} {{qualifier|Brazil}}
+* {{ttbc|tr}}: {{t+|tr|sarışın}}
+{{checktrans-bottom}}
+
+===Derived terms===
+* [[ash blond]], [[ash blonde]]
+* [[dishwater blond]], [[dishwater blonde]]
+* [[dumb blond]], [[dumb blonde]]
+* [[peroxide blond]], [[peroxide blonde]]
+* [[platinum blond]], [[platinum blonde]]
+* [[strawberry blond]], [[strawberry blonde]]
+
 ===See also===
+* [[towhead]]
 * [[Appendix:Colors]]
 
 [[Category:en:Colors]]
