--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -15,7 +15,7 @@
 * {{hyphenation|but|ter}}
 
 ===Etymology 1===
-From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{etyl|gmw}} {{recons|buterô||butter|lang=gmw}} (compare West Frisian {{term|buter|lang=fy}}, Dutch {{term|boter|lang=nl}}, German {{term|Butter|lang=de}}), from {{etyl|la}} {{term|butyrum|būtȳrum|lang=la}}, from {{etyl|grc}} {{term|sc=polytonic|βούτυρον|βούτῡρον|tr=boútȳron|lang=grc|cow cheese}}, compound of {{term|sc=polytonic|βοῦς|tr=boûs|lang=grc||ox, cow}} and {{term|sc=polytonic|τυρός|τῡρός|tr=tyrós|lang=grc|cheese}}, from Scythian (compare Avestan {{rfscript|Avestan}} {{term|||lang=ae|tr=tūiri|curdled milk, whey}}), from {{etyl|ine-pro|en}} {{recons|tuhₓrós|lang=ine-pro}} (compare [[Middle Indic]] {{term|tūra||cheese}}, Russian {{term|творог|tr=tvoróg||curds, soft cheese|lang=ru}}, {{etyl|ang|-}} {{term|lang=ang|þweran||to churn}}, {{term|ge-þweor||curds}})
+From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{etyl|gmw}} {{recons|buterô||butter|lang=gmw}} (compare West Frisian {{term|buter|lang=fy}}, Dutch {{term|boter|lang=nl}}, German {{term|Butter|lang=de}}), from {{etyl|la}} {{term|butyrum|būtȳrum|lang=la}}, from {{etyl|grc}} {{term|βούτυρον|βούτῡρον|tr=boútȳron|lang=grc|cow cheese}}, compound of {{term|sc=polytonic|βοῦς|tr=boûs|lang=grc||ox, cow}} and {{term|sc=polytonic|τυρός|τῡρός|tr=tyrós|lang=grc|cheese}}, from Scythian (compare Avestan {{rfscript|Avestan}} {{term|||lang=ae|tr=tūiri|curdled milk, whey}}), from {{etyl|ine-pro|en}} {{recons|tuHrós|lang=ine-pro}} (compare [[Middle Indic]] {{term|tūra||cheese}}, Russian {{term|творог|tr=tvoróg||curds, soft cheese|lang=ru}}, {{etyl|ang|-}} {{term|lang=ang|þweran||to churn}}, {{term|ge-þweor||curds}})
 
 ====Noun====
 {{en-noun|-|s}}
