--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -40,7 +40,7 @@ From {{etyl|he}} {{term|ישראל|יִשְׂרָאֵל|Israel|lang=he|tr=yisra'
 ====Translations====
 {{rfc-tsort|duplicate language: Serbo-Croatian}}
 {{trans-top|the state}}
-* Albanian: [[Izraeli]]
+* Albanian: {{t|sq|Izraeli}}
 * Amharic: {{t-|am|እስራኤል|tr=əsra'el|sc=Ethi}}
 * Arabic: {{t-|ar|إسرائيل|m|tr='isra'íl}}
 * Armenian: {{t-|hy|Իսրայել|tr=Israyel}}
@@ -87,18 +87,18 @@ From {{etyl|he}} {{term|ישראל|יִשְׂרָאֵל|Israel|lang=he|tr=yisra'
 * Latvian: {{t+|lv|Izraēla}}, {{t-|lv|Izraēlas Valsts}}
 * Lithuanian: {{t+|lt|Izraelis|m}}, {{t-|lt|Izraelio Valstybė|f}}
 {{trans-mid}}
-* Livonian: [[Izraēl]], [[Jūdõmō]]
+* Livonian: {{t|liv|Izraēl}}, {{t|liv|Jūdõmō}}
 * Luo: {{tø|luo|Israel}}
 * Macedonian: {{t+|mk|Израел|m|tr=Ízrael}}
 * Malay: {{t-|ms|Israel}}
-* Maltese: [[Iżrael]]
+* Maltese: {{t|mt|Iżrael}}
 * Mansoanka: {{tø|msw|Israeli}}
-* Marathi: [[इस्रायल]] (isrāyal), {{t-|mr|इस्रायल|tr=isrāyal|sc=Deva}}
+* Marathi: {{t|mr|इस्रायल|tr=isrāyal|sc=Deva}}, {{t-|mr|इस्रायल|tr=isrāyal|sc=Deva}}
 * Meru: {{tø|mer|Israel}}
 * Mongolian: {{t-|mn|Израйль|tr=Izrajl'|sc=Cyrl}}
 * Navajo: {{tø|nv|Ízrel bikéyah}}
 * Norwegian: {{t+|no|Israel}}
-* Old Church Slavonic: [[Їздраил҄ь]]
+* Old Church Slavonic: {{t|cu|Їздраил҄ь|sc=Cyrs}}
 * Oriya: {{t-|or|ଇସ୍ରାଏଲ|sc=Orya}}
 * Pashto: {{t-|ps|اسرايل|sc=ps-Arab}}
 * Persian: {{t+|fa|اسرائیل|tr=Esrâ’il}}
@@ -122,7 +122,7 @@ From {{etyl|he}} {{term|ישראל|יִשְׂרָאֵל|Israel|lang=he|tr=yisra'
 * Tajik: {{t-|tg|Исроил|tr=Isroil|sc=Cyrl}}
 * Tamil: {{t-|ta|இஸ்ரேல்|tr=isrēl|sc=Taml}}
 * Tatar: {{t-|tt|Исраил|tr=İsrail|sc=Cyrl}}
-* Thai: {{t-|th|ประเทศอิสราเอล|tr=bpràtâyt ìtsàrăa-ayn}},  {{t+|th|อิสราเอล|tr=ìt-sà-răa-ayn}}
+* Thai: {{t-|th|ประเทศอิสราเอล|tr=bpràtâyt ìtsàrăa-ayn}}, {{t+|th|อิสราเอล|tr=ìt-sà-răa-ayn}}
 * Tibetan: {{t-|bo|ཨི་སི་ར་ཨེལ།|sc=Tibt}}
 * Turkish: {{t+|tr|İsrail}}
 * Turkmen: {{t-|tk|Izrail}}
