--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -32,7 +32,11 @@ From {{etyl|enm}} {{term|comen|lang=enm}}, {{term|cumen|lang=enm}}, from {{etyl|
 #: ''His test scores '''came''' close to perfect.''
 # {{figuratively|with ''to''}} To take a particular [[approach]] or [[point of view]] in regard to something.
 #: ''He '''came''' to SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.''
-#{{slang}} {{simple past of|come}}
+# {{context|copulative|archaic}} To [[become]], to [[turn out]] to be.
+#: ''He was a dream '''come''' true.''
+
+====Usage notes====
+The phrase "dream come true" is a set phrase; the verb "come" in the sense "become" is archaic outside of that<!-- and other--> set phrase<!--s-->.
 
 The collocations “[[come with]]” and “[[come along]]” mean {{term|accompany}}, used as “Do you want to come with me?” and “Do you want to come along?” In the Midwestern American dialect, “come with” can occur without a following object, as in “Do you want to come with?” In this dialect, “with” can also be used in this way with some other verbs, such as “take with”. Examples of this may be found in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American Buffalo}}.''<ref>[http://positiveanymore.blogspot.com/2006/04/chicago-dialect.html Chicago Dialect]</ref> This objectless use is not permissible in other dialects.
 
