--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -191,10 +191,10 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Azeri: {{t+|az|yağ}}
 * Belarusian: {{t-|be|масла|n|tr=másla|sc=Cyrl}}
 * Bengali: {{t-|bn|মাখন|tr=makhôn|sc=Beng}}
-* Breton: [[amanenn]] {{m}}
+* Breton: {{t|br|amanenn|m}}
 * Bulgarian: {{t+|bg|масло|n|tr=máslo}}
 * Burmese: {{t+|my|ထောပတ်|tr=hto: bá|sc=Mymr}}
-* Catalan: [[mantega]] {{f}}
+* Catalan: {{t|ca|mantega|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|黃油|sc=Hani}}, {{t+|cmn|黄油|tr=huángyóu|sc=Hani}}, {{t+|cmn|牛油|tr=niúyóu|sc=Hani}}, {{t+|cmn|白脫|sc=Hani}}, {{t+|cmn|白脱|tr=báituō|sc=Hani}}
 * Czech: {{t+|cs|máslo|n}}
@@ -208,23 +208,23 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * French: {{t+|fr|beurre|m}}
 * Georgian: {{t-|ka|კარაქი|tr=karak'i|sc=Geor}}
 * German: {{t+|de|Butter|f}}
-*: Bavarian: [[Budda]] {{m}}
+*: Bavarian: {{t|bar|Budda|m}}
 * Greek: {{t+|el|βούτυρο|n|tr=voútyro}}
 * Greenlandic: {{t-|kl|punneq}}
 * Hebrew: {{t+|he|חמאה|f|alt=חֶמְאָה|tr=khem'a}}
 * Hindi: {{t-|hi|घी|tr=ghī}}, {{t-|hi|मक्खन|tr=makkhan}}
 * Hungarian: {{t+|hu|vaj}}
 * Icelandic: {{t+|is|smjör|n}}
-* Ido: [[butro]]
+* Ido: {{t|io|butro}}
 * Indonesian: {{t+|id|mentega}}
 * Ingrian: {{tø|izh|voi}}
-* Interlingua: [[butyro]]
+* Interlingua: {{t|ia|butyro}}
 * Irish: {{t+|ga|im|m}}
 * Italian: {{t+|it|burro|m}}
 * Japanese: {{t+|ja|バター|tr=batā}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku}}
 * Kazakh: {{t|kk|май|tr=may|sc=Cyrl}}
 * Khmer: {{t-|km|បឺរ|tr=bər|sc=Khmr}}, {{t-|km|ខ្លាញ់ទឹកដោះ|tr=klañ tɨk dɑh|sc=Khmr}}
-* Kinyarwanda: [[amavuta]]
+* Kinyarwanda: {{t|rw|amavuta}}
 * Korean: {{t+|ko|버터|tr=beoteo|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t+|ku|که‌ره‌|sc=ku-Arab}}
