--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -161,6 +161,10 @@
 {{en-adj}}
 
 # Of a [[grayish]] [[green]] [[color]], that of an unripe olive.
+#*{{quote-book|year=1907|author=[[w:Harold Edward Bindloss|Harold Bindloss]]
+|title=The Dust of Conflict
+|chapter=22|url=http://openlibrary.org/works/OL4429277W
+|passage=Appleby{{...}}rose from his seat when Morales came in. He shook hands urbanely, unbuckled his sword, and laid his kepi on the table, and then sat down with an expression of concern in his '''olive''' face which Appleby fancied was assumed.}}
 
 ====Translations====
 {{trans-top|colour}}
