--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -285,6 +285,7 @@
 * Irish: {{t-|ga|imir}}, {{t-|ga|súgradh}}
 * Italian: {{t+|it|giocare}}
 * Japanese: {{t+|ja|遊ぶ|tr=あそぶ, asobu|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|jouer}}
 * Korean: {{t+|ko|놀다|tr=nolda|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=ku-Arab}}
@@ -377,6 +378,7 @@
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t-|is|spila}}
 * Japanese: {{t+|ja|演奏|tr=えんそうする, ensō-suru|alt=演奏する|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|jouer}}
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ku|مۆسیقا لێدان|tr=mósíqa lédan|sc=ku-Arab}}
@@ -417,9 +419,10 @@
 * Greek: {{t+|el|παίζω|tr=pézo}}
 * Hebrew: {{t+|he|שיחק|tr=sikhék}}
 * Hungarian: {{t+|hu|játszik}}
-{{trans-mid}}
 * Icelandic: {{t+|is|leika}}
+{{trans-mid}}
 * Italian: {{t+|it|recitare}}
+* Jèrriais: {{tø|roa-jer|jouer}}
 * Korean: [[연기를 하다]] (yeon-gireul hada)
 * Macedonian: {{t-|mk|глуми|tr=glúmi}},  {{t-|mk|игра|tr=ígra}}
 * Pashto: {{t-|ps|لوبه كول|tr=loba kawəl|sc=ps-Arab}}
