--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -78,6 +78,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 {{trans-mid}}
 * Italian: {{t+|it|trovare}}
 * Japanese: {{t-|ja|見つける|tr=みつける, mitsukeru|sc=Jpan}} ({{t-|ja|見附る|sc=Jpan}})
+* Jèrriais: {{tø|roa-jer|trouver}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[دیتنه‌وه‌]]}}, {{ku-Arab|[[دۆزینه‌وه‌]]}}
 * Latgalian: {{tø|ltg|atrast}}, {{tø|ltg|rast}}
