--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -202,20 +202,21 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{etyl|gem-pro|en}} {
 
 ===Derived terms===
 {{rel-top3|Terms derived from the noun or verb ''flesh''}}
+* [[exchange flesh]]
 * [[flesh and blood]]
 * [[flesh fly]]
 * [[flesh out]]
 * [[flesh side]]
 * [[flesh-wing]]
-* [[flesh wound]]
 {{rel-mid3}}
+* [[flesh wound]]
 * [[flesher]]
 * [[fleshing]]
 * [[fleshpot]]
 * [[fleshy]]
 * [[goose flesh]]
-* [[in the flesh]]
 {{rel-mid3}}
+* [[in the flesh]]
 * [[one flesh]]
 * [[pound of flesh]]
 * [[press the flesh]]
