--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -94,6 +94,7 @@
 {{trans-mid}}
 * Latvian: {{t-|lv|spiest}}
 * Macedonian: {{t|mk|турка|tr=túrka|sc=Cyrl}}, {{t|mk|бутка|tr=bútka|sc=Cyrl}}
+* Neapolitan: {{tø|nap|vottà}}
 * Norwegian: {{t-|no|dytte}}, {{t-|no|skubbe}}
 * Occitan: {{t+|oc|butar}}
 * Old English: {{t-|ang|scufan|alt=scūfan}}
