--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -153,6 +153,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Ukrainian: {{t|uk|тягнути|tr=tjahnúty|sc=Cyrl}} {{impf}}, {{t|uk|потягнути|tr=potjahnúty|sc=Cyrl}} {{pf.}}, {{t|uk|тягти|tr=tjahtý|sc=Cyrl}} {{impf}}
 * Urdu: {{t|ur|کهينچنا|tr=khī̃cnā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|kéo}}, {{t+|vi|giật}}
+* Walloon: {{t|wa|saetchî}}
 * West Frisian: {{t+|fy|trekke}},  {{t-|fy|lûke}}
 {{trans-bottom}}
 
