--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -100,6 +100,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 {{trans-top|apply force to (something) so it comes towards one}}
 * Arabic: {{t-|ar|جر|tr=járra}},  {{t-|ar|سحب|tr=sáḥaba}}
 *: Egyptian Arabic: {{tø|arz|جر|tr=garr|sc=Arab}}, {{tø|arz|جرجر|tr=gargar|sc=Arab}}, {{tø|arz|سحب|tr=saḥab|sc=Arab}}
+*: Moroccan Arabic: {{tø|ary|جر|tr=jerr}}, {{tø|ary|جبد|tr=jbed}}
 * Armenian: {{t-|hy|քաշել|tr=k'ašel}}, {{t-|hy|ձգել|tr=jgel}}
 * Azeri: {{t|az|çəkmək}}
 * Belarusian: {{t|be|цягнуць|tr=cjahnúcʹ|sc=Cyrl}} {{impf}}, {{t|be|пацягнуць|tr=pacjahnúcʹ|sc=Cyrl}} {{pf.}}
