--- a/en/u/unvitiated.7220.wikitext
+++ b/en/u/unvitiated.7220.wikitext
@@ -4,6 +4,7 @@
 {{en-adj}}
 
 # Not [[vitiated]]; [[pure]].
-
+#*'''1851''', [[w:Herman Melville|Herman Melville]], ''[[w:Moby Dick|Moby Dick]]'', [[s:Moby-Dick/Chapter 27|chapter 27]]
+#*:Tashtego’s long, lean, sable hair, his high cheek bones, and black rounding eyes—for an Indian, Oriental in their largeness, but Antarctic in their glittering expression—all this sufficiently proclaimed him an inheritor of the '''unvitiated''' blood of those proud warrior hunters, who, in quest of the great New England moose, had scoured, bow in hand, the aboriginal forests of the main.  
 [[ta:unvitiated]]
 [[vi:unvitiated]]
