--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -36,6 +36,8 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 # A small sum of money put in a [[cashier]]'s [[till]] at the start of business to enable [[change]] to be made.
 # {{poker}} A maneuver where a player calls on the [[flop]] or [[turn]] with a weak hand, with the intention of [[bluff#Verb|bluffing]] after a subsequent [[community card]].
 # {{context|knitting}} One of the loose ends of [[yarn]] on an unfinished work.
+# {{context|automotive}} a [[car carrier]] or [[car transporter]] truck or truck-and-trailer combination
+# {{context|transport}} a [[lowboy]] trailer
 
 ====Synonyms====
 * {{sense|Shares offered to the public:}} [[initial public offering]]
