--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -54,7 +54,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Japanese: {{t+|ja|カーテン|tr=kāten}}
 * Korean: {{t+|ko|커튼|tr=keoteun|sc=Kore}}
 * Kurdish:
-*: [[Kurmanji]]: {{t+|ku|perde}} {{f}}
+*: [[Kurmanji]]: {{t+|ku|perde|f}}
 *: Sorani: {{ku-Arab|[[په‌رده‌]]}}
 * Latvian: {{t-|lv|aizkars|m}}
 {{trans-mid}}
@@ -62,6 +62,8 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Luxembourgish: {{t-|lb|Rido|f}}
 * Macedonian: {{t-|mk|завеса|f|tr=závesa}},  {{t-|mk|перде|n|tr=pérde}}
 * Norwegian: {{t+|no|gardin|m|f|n}}
+* {{trreq|oc}}
+* {{trreq|ps}}
 * Persian: {{t+|fa|پرده|tr=parde}}
 * Polish: {{t+|pl|zasłona|f}}
 * Portuguese: {{t+|pt|cortina|f}}
@@ -71,6 +73,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Serbo-Croatian:
 *: Cyrillic: (''Ekavian'') {{t-|sh|завеса|f|alt=за̑веса|sc=Cyrl}}, (''Ijekavian'') {{t-|sh|завјеса|f|alt=за̑вјеса|sc=Cyrl}}; {{t-|sh|застор|m|alt=за́стор|sc=Cyrl}}
 *: Roman: (''Ekavian'') {{t-|sh|zavesa|f|alt=zȃvesa}}, (''Ijekavian'') {{t-|sh|zavjesa|f|alt=zȃvjesa}}; {{t-|sh|zastor|m|alt=zástor}}
+* {{trreq|sk}}
 * Slovene: {{t+|sl|zavesa|f|alt=zavésa}}
 * Spanish: {{t-|es|cortina|f}}
 * Swahili: {{t+|sw|pazia}}
@@ -79,7 +82,9 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Turkish: {{t+|tr|perde}}
 * Urdu: {{t-|ur|پردہ|m|tr=parda|sc=ur-Arab}}
 * Venetian: {{tø|vec|coltrìna|f}}
+* {{trreq|vo}}
 * Welsh: {{t-|cy|llen|f}},  {{t-|cy|llenni|f|p}}
+* {{trreq|yi}}
 {{trans-bottom}}
 
 {{trans-top|piece of cloth in a theater}}
