--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -76,7 +76,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Dutch Low Saxon: {{tø|nds-nl|keie}}
 * Esperanto: {{t-|eo|briko}}
 * Estonian: {{t-|et|tellis}}
-* {{trreq|Faroese}}
+* Faroese: {{t|fo|múrsteinur|m}}
 * Finnish: {{t+|fi|tiili}}
 * French: {{t+|fr|brique}}
 * {{trreq|Friulian}}
