--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -32,9 +32,9 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 {{trans-top|piece of cloth covering a window}}
 * Arabic: {{t-|ar|ستارة|f|tr=sitāra}}
 * Armenian: {{t-|hy|վարագույր|tr=varaguyr}}
-* {{trreq|ast}}
+* Asturian: {{t|ast|cortina|f}}
 * Azeri: {{t+|az|pərdə}}
-* Bulgarian: {{t+|bg|перде|n}},  {{t+|bg|завеса|f}}
+* Bulgarian: {{t+|bg|перде|n}}, {{t+|bg|завеса|f}}
 * Catalan: {{t+|ca|cortina|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|窗簾|sc=Hani}}, {{t|cmn|窗帘|tr=chuānglián|sc=Hani}}, {{t|cmn|簾子|sc=Hani}}, {{t|cmn|帘子|tr=liánzi|sc=Hani}},
@@ -46,9 +46,9 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * {{trreq|fo}}
 * Finnish: {{t-|fi|verho}}
 * French: {{t+|fr|rideau|m}}
-* {{trreq|gl}}
+* Galician: {{t|gl|cortina|f}}
 * Georgian: {{t-|ka|ფარდა|tr=p'arda|sc=Geor}}
-* German: {{t+|de|Vorhang|m}},  {{t+|de|Gardine|f}}
+* German: {{t+|de|Vorhang|m}}, {{t+|de|Gardine|f}}
 * Greek: {{t+|el|κουρτίνα|f}}
 * {{trreq|gu}}
 * Hebrew: {{t+|he|וילון|m|tr=vilon}}
@@ -63,7 +63,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Korean: {{t+|ko|커튼|tr=keoteun|sc=Kore}}
 * Kurdish:
 *: [[Kurmanji]]: {{t+|ku|perde|f}}
-*: Sorani: {{ku-Arab|[[په‌رده‌]]}}
+*: Sorani: {{t|ku|په‌رده‌}}
 {{trans-mid}}
 * Latvian: {{t-|lv|aizkars|m}}
 * Lithuanian: {{t-|lt|užuolaida|f}}
@@ -96,7 +96,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Urdu: {{t-|ur|پردہ|m|tr=parda|sc=ur-Arab}}
 * Venetian: {{tø|vec|coltrìna|f}}
 * {{trreq|vo}}
-* Welsh: {{t-|cy|llen|f}},  {{t-|cy|llenni|f|p}}
+* Welsh: {{t-|cy|llen|f}}, {{t-|cy|llenni|f|p}}
 * {{trreq|yi}}
 {{trans-bottom}}
 
