--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|ang}} {{term|þunor}}, from {{etyl|gem-pro|en}} {{recons|þunraz|lang=gem-pro}}, from *þen, from {{etyl|ine-pro|en}} {{recons|(s)ten(ə)-||to thunder|lang=ine-pro}}. Compare [[w:Persian language|Persian]] {{fa-Arab|[[تندر]]}} (tondar).
+From {{etyl|ang}} {{term|þunor}}, from {{etyl|gem-pro|en}} {{recons|þunraz|lang=gem-pro}}, from *þen, from {{etyl|ine-pro|en}} {{recons|(s)tenh₂-||to thunder|lang=ine-pro}}. Germanic cognates include West Frisian {{term|tonger|lang=fy}}, Dutch {{term|donder|lang=nl}}, German {{term|Donner|lang=de}}. Other cognates include [[w:Persian language|Persian]] {{fa-Arab|[[تندر]]}} (tondar).
 
 ===Pronunciation===
 * {{a|UK}}: {{IPA|/ˈθʌn.də/}}, {{X-SAMPA|/"TVnd@/}}
