--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -186,6 +186,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 * Lithuanian: {{t+|lt|slyva}}
 * Luxembourgish: {{t-|lb|Promm|f}}, {{t-|lb|Praum|f}}
 * Macedonian: {{t-|mk|слива|f|tr=slíva}}
+* Malagasy: {{t|mg|pesombazaha}}
 * Manx: {{t-|gv|plumbis|m}}
 * Middle High German: {{tø|gmh|pflume|alt=pflūme}}, {{tø|gmh|pfrume|alt=pfrūme}}
 * Navajo: {{tø|nv|chʼil naʼatłʼoʼiitsoh}}
