--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -50,6 +50,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 *: Egyptian Arabic: {{tø|arz|فرنسا|f|tr= faransa|sc=Arab}}
 * Aragonese: {{t-|an|Franzia|f}}
 * Armenian: {{t+|hy|Ֆրանսիա|tr=Fransia}}
+* Aromanian: {{t|rup|Gallia}}, {{t|rup|Frantsia}}
 * Asturian: {{t+|ast|Francia|f}}
 * Azeri: {{t+|az|Fransa}}
 * Basque: {{t+|eu|Frantzia}}
