--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -30,6 +30,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 
 ====Translations====
 {{trans-top|piece of cloth covering a window}}
+* Albanian: {{t|sq|perde|m}}
 * Arabic: {{t-|ar|ستارة|f|tr=sitāra}}
 * Armenian: {{t-|hy|վարագույր|tr=varaguyr}}
 * Asturian: {{t|ast|cortina|f}}
@@ -64,11 +65,12 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Kurdish:
 *: [[Kurmanji]]: {{t+|ku|perde|f}}
 *: Sorani: {{t|ku|په‌رده‌}}
-* Latvian: {{t-|lv|aizkars|m}}
 {{trans-mid}}
+* Latvian: {{t-|lv|aizkars|m}}
 * Lithuanian: {{t-|lt|užuolaida|f}}
 * Luxembourgish: {{t-|lb|Rido|f}}
 * Macedonian: {{t-|mk|завеса|f|tr=závesa}},  {{t-|mk|перде|n|tr=pérde}}
+* Malay: {{t|ms|tirai}}, {{t|ms|tabir}}
 * Norwegian: {{t+|no|gardin|m|f|n}}
 * {{trreq|nov}}
 * Occitan: {{t|oc|cortina|f}}
@@ -83,7 +85,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Serbo-Croatian:
 *: Cyrillic: (''Ekavian'') {{t-|sh|завеса|f|alt=за̑веса|sc=Cyrl}}, (''Ijekavian'') {{t-|sh|завјеса|f|alt=за̑вјеса|sc=Cyrl}}; {{t-|sh|застор|m|alt=за́стор|sc=Cyrl}}
 *: Roman: (''Ekavian'') {{t-|sh|zavesa|f|alt=zȃvesa}}, (''Ijekavian'') {{t-|sh|zavjesa|f|alt=zȃvjesa}}; {{t-|sh|zastor|m|alt=zástor}}
-* {{trreq|sk}}
+* Slovak: {{t|sk|opona|f}}
 * Slovene: {{t+|sl|zavesa|f|alt=zavésa}}
 * {{trreq|so}}
 * Spanish: {{t-|es|cortina|f}}
@@ -94,6 +96,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * {{trreq|th}}
 * Turkish: {{t+|tr|perde}}
 * Urdu: {{t-|ur|پردہ|m|tr=parda|sc=ur-Arab}}
+* Uzbek: {{t|uz|parda}}
 * Venetian: {{tø|vec|coltrìna|f}}
 * {{trreq|vo}}
 * Welsh: {{t-|cy|llen|f}}, {{t-|cy|llenni|f|p}}
