--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -507,6 +507,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Jèrriais: {{tø|roa-jer|coper}}
 * Latin: {{t-|la|seco}}, {{t-|la|interseco}}, {{t-|la|curto}}
 * Portuguese: {{t+|pt|cortar}}
+* Quechua: {{t|qu|kuchuy}}
 * Romanian: {{t-|ro|tăia}}
 * Romansch: {{t-|rm|tagliar}}
 * Russian: {{t+|ru|разрезать|alt=разреза́ть|tr=razrezátʹ}} {{impf}}, {{t+|ru|разрезать|alt=разре́зать|tr=razrézatʹ}} {{pf.}}
