--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|specan|specan|to speak|lang=ang}}, alteration of earlier {{term|sprecan|sprecan|to speak|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|sprekanan||to speak, make a sound|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|spreg-||to make a sound, utter, speak|lang=ine-pro}}. Cognate with Dutch {{term|spreken||to speak|lang=nl}}, German {{term|sprechen||to speak|lang=de}}, Albanian {{term|shpreh||to utter, voice, express|lang=sq}}.
+From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|specan|specan|to speak|lang=ang}}, alteration of earlier {{term|sprecan|sprecan|to speak|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|sprekanan||to speak, make a sound|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|spreg-||to make a sound, utter, speak|lang=ine-pro}}. Cognate with West Frisian {{term|sprekke|lang=fy}}, Dutch {{term|spreken||to speak|lang=nl}}, German {{term|sprechen||to speak|lang=de}}, Albanian {{term|shpreh||to utter, voice, express|lang=sq}}.
 
 ===Pronunciation===
 * {{enPR|spēk}}, {{IPA|/spiːk/}}, {{X-SAMPA|/spi:k/}}
