--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -192,7 +192,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 ===Pronunciation===
 * {{IPA|/fʁɑ̃s/|lang=fr}}
 * {{audio|Fr-France.ogg|audio (France)}}
-* {{audio|Fr-France-fr-CA-Quebec-(Lac-Saint-Jean).ogg|audio (Quebec)}}
+* {{audio|Fr-France-fr-CA-Québec-(Lac-Saint-Jean).oga|audio (Quebec)}}
 
 ===Etymology===
 From {{etyl|fro|fr}} {{term|France|lang=fro}}, from {{etyl|LL.|fr}} {{term|Francia|lang=la}}, from {{term|Franci|Francī|lang=la}}, the name of a {{etyl|gem|fr}} tribe.
