--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -113,6 +113,7 @@
 * Spanish: {{t+|es|puerto|m}}
 * Swahili: {{t+|sw|bandari}}
 * Swedish: {{t+|sv|hamnstad|c}}
+* Turkish: {{l|tr|liman}} {{t+|tr|kenti}}/{{t+|tr|şehri}}
 {{trans-bottom}}
 
 {{trans-see|left-hand side of a vessel|larboard}}
