--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -179,7 +179,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 * Jèrriais: {{tø|roa-jer|preune|f}}
 * Khmer: {{t-|km|ម៉ាក់ប្រាង|tr=makpraang|sc=Khmr}}
 * Korean: {{t+|ko|자두|tr=jadu|sc=Hang}}, {{t-|ko|서양자두|tr=seoyangjadu|sc=Hang}}
-* Lao: {{t-|lo|ໝາກໝັ້ນ|sc=Laoo}}
+* Lao: {{t-|lo|ໝາກໝັ້ນ|tr=mak man|sc=Laoo}}
 {{trans-mid}}
 * Latin: {{t-|la|prunum|n|alt=prūnum}}
 * Latvian: {{t-|lv|plūme|f}}
@@ -245,6 +245,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 * Japanese: {{t-|ja|セイヨウスモモ|tr=seiyō sumomo}}
 * Jèrriais: {{tø|roa-jer|preunyi|m}}
 * Korean: {{t-|ko|자두나무|tr=jadunamu|sc=Hang}}
+* Lao: {{t-|lo|ໝາກພຼຳ|tr=makpham|sc=Laoo}}
 * Latin: {{t-|la|prunus|f|alt=prūnus}}
 {{trans-mid}}
 * Latvian: {{t-|lv|plūme|f}}
