--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -1,4 +1,8 @@
-Butter is Awesome Pro kill squids bye
+{{also|Butter}}
+==English==
+[[Image:NCI butter.jpg|thumb|right|250 px|Butter {{gloss|food made of cream}} [[stick]] with a butter [[knife]].]]
+{{wikipedia}}
+
 ===Pronunciation===
 * {{enPR|bŭtʹ-ər}}, {{IPA|/ˈbʌ.təɹ/}}, {{X-SAMPA|/"bV.t@r\/}}
 *** {{a|UK}} {{IPA|/ˈbʌ.tə/}}, {{X-SAMPA|"bV.t@/}}
