--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -11,7 +11,7 @@ Or, 晶 is the sound. (?)
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6010<sub>4</sub>|canj=日竹手一 (AHQM)|ids=⿱[[日]][[生]]}}
 
 # a [[star]], [[planet]]
-# any point of light
+# any [[point]] of [[light]]
 # shorthand for [[Singapore]] (星加坡)
 
 ====References====
