--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -40,6 +40,8 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 # {{intransitive}} {{rfdef|lang=en}}
 #: ''He's as tough as they '''come'''.''
 #: ''Our milkshakes '''come''' in vanilla, strawberry and chocolate flavours.''
+# {{slang}} To carry through; to succeed in.
+#: ''You can't '''come''' any tricks here.''
 
 ====Usage notes====
 The phrase "dream come true" is a set phrase; the verb "come" in the sense "become" is archaic outside of that<!-- and other--> set phrase<!--s-->.
