--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -77,10 +77,10 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Japanese: {{t+|ja|喧嘩|tr=けんかする, kenka-suru|sc=Jpan|alt=喧嘩する}}, {{t-|ja|対決|tr=たいけつする, taiketsu-suru|sc=Jpan|alt=対決する}}, {{t-|ja|戦う|tr=たたかう, tatakau|sc=Jpan}} / {{t-|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|freûler|alt=s'freûler}}
 * Khmer: {{t-|km|វាយតប់|tr=wīē-dtop|sc=Khmr}}
-{{trans-mid}}
 * Korean: {{t+|ko|다투다|tr=datuda|sc=Kore}}, {{t+|ko|싸우다|tr=ssauda|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t-|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=ku-Arab}}
+{{trans-mid}}
 * Lao: {{t-|lo|ຕໍ່ສູ້|tr=töö-suu|sc=Laoo}}, {{t-|lo|ຮົບ|tr=hop|sc=Laoo}}
 * Latgalian: {{tø|ltg|sistīs}}, {{tø|ltg|ceikstētīs}}, {{tø|ltg|veiktīs}}
 * Latin: {{t-|la|pugno}}, {{t-|la|luctor}}
@@ -112,7 +112,7 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * {{trreq|Tibetan}}
 * Tok Pisin: {{t-|tpi|paitim}}
 * Turkish: {{t+|tr|savaşmak}}
-* {{trreq|Tuvan}}
+* Tuvan: {{tø|tyv|демисежир|tr=demisežir}}
 * Ukrainian: {{t+|uk|битися|tr=býtysja|sc=Cyrl}}, {{t+|uk|боротися|tr=borótysja|sc=Cyrl}}
 * {{trreq|Urdu}}
 * Vietnamese: {{t+|vi|chiến đấu}}
