--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -384,6 +384,7 @@ Name of an older card game ''biritch'', probably {{etyl|ru}} {{term|бирич|l
 * Latvian: {{t-|lv|bridžs|m}}
 {{trans-mid}}
 * Macedonian: {{t-|mk|бриџ|m|tr=bridž|sc=Cyrl}}
+* Malay: {{t|ms|brij}}
 * Polish: {{t+|pl|brydż|m}}
 * Romanian: {{t-|ro|bridge}}
 * Russian: {{t+|ru|бридж|m|tr=bridž}}
