--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -19,6 +19,12 @@ From {{etyl|ang}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|þ
 # A sound resembling thunder.
 # A deep, [[rumble|rumbling]] noise.
 #: ''Off in the distance, he heard the '''thunder''' of hoofbeats, signalling a stampede.''
+# An alarming or startling [[threat]] or [[denunciation]].
+#* Prescott
+#*: The '''thunders''' of the Vatican could no longer strike into the heart of princes.
+# {{obsolete}} The [[discharge]] of [[electricity]]; a [[thunderbolt]].
+#* Shakespeare
+#*: The revenging gods / 'Gainst parricides did all their '''thunders''' bend.
 
 ====Usage notes====
 * [[roll]], [[clap]], [[peal]] are some of the words used to count thunder.
