--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -224,6 +224,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Finnish: {{t+|fi|tulla}}, {{t-|fi|saada orgasmi}}
 * French: {{t+|fr|jouir}}, {{t+|fr|venir}}
 * German: {{t+|de|kommen}}
+* Greek: {{t|el|χύνω|tr=hino, heeno|sc=Grek}} {{qualifier|slang}}
 * Hungarian: {{t-|hu|elélvez}}
 * Icelandic: {{t-|is|fá það}}
 {{trans-mid}}
