--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -110,6 +110,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * Icelandic: {{t+|is|brú|f}}
 * Ido: {{t+|io|ponto}}
 * Indonesian: {{t+|id|jembatan}}
+*: Sundanese: {{t+|id|cukang}}
 * Interlingua: {{t-|ia|ponte}}
 * {{trreq|ie}}
 * Irish: {{t+|ga|droichead|m}}
