--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -56,6 +56,8 @@
 * {{l|ja|sc=Jpan|地表|tr=ちひょう, chihyō}}
 * {{l|ja|sc=Jpan|地方|tr=ちほう, chihō}}
 * {{l|ja|sc=Jpan|地震|tr=じしん, jishin}}
+* [[天地]] ([[てんち]], ''[[tenchi]]''): heaven and earth
+* [[天變地異]] ([[てんへんちい]], ''[[tenpenchī]]''): [[turmoil[[ throughout heaven and earth
 {{bottom}}
 
 ===Noun===
