--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -101,7 +101,7 @@ From {{etyl|enm}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang}} {{t
 * Italian: {{t+|it|succhiare}}, {{t-|it|suggere}}
 * Japanese: {{t-|ja|吸う|tr=すう, suu}}, {{t-|ja|しゃぶる|tr=shaburu}}
 * Korean: {{t+|ko|빨다|tr=ppalda}}
-* Kurdish: {{t+|ku|mêjîn}}, {{t+|ku|mêtin}}, {{ku-Arab|[[مژین]]}}
+* Kurdish: {{t+|ku|mêjîn}}, {{t+|ku|mêtin}}, {{t|ku|مژین|sc=ku-Arab}}
 * Latin: {{t+|la|sugo}}
 {{trans-mid}}
 * Latvian: {{t+|lv|sūkt}}
