--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -170,6 +170,7 @@ From {{etyl|enm}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang}} {{t
 ===Noun===
 {{en-noun}}
 
+# An instance of drawing something into one's mouth by inhaling.
 # {{Canada}} A [[weak]], [[self-pitying]] person; a person who won't [[go along]], especially out of [[spite]]; a [[crybaby]] or [[sore loser]].
 #* '''1999''', Hiromi Goto, “Drift”, in ''Ms.'', v 9, n 3, p 82–6:
 #*: “Why're you bothering to take her anywhere? I can't stand traveling with her. You're such a '''suck''',” her sister said. Waved her smoke. “No fucking way I'm going.”
@@ -180,10 +181,14 @@ From {{etyl|enm}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang}} {{t
 #*: You are McGlade's '''suck'''.
 
 ====Synonyms====
-* [[sook]]
-* [[sooky baby]]
+* {{sense|?}} [[sook]]
+* {{sense|?}} [[sooky baby]]
 
 ====Translations====
+{{trans-top|instance of drawing something into one's mouth by inhaling}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{trans-see|sycophant}}
 
 ===Anagrams===
